--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {background-color:black;font-family:arial;color:white}
 h1{color:grey;font-family:verdana}
-.maindiv {background-color:white;color:black;width:300px;padding:20px;border-radius:20px;margin:auto}
-
+.maindiv {background-color:white;color:black;width:300px;padding:20px;border-radius:20px;margin:auto; clear:both}
+.maindiv input {width: 100%; clear: both}
